Changed defaultAdminPolicy to defaultPolicy, added test for <zot verify>

--- a/examples/config-policy.json
+++ b/examples/config-policy.json
@@ -44,9 +44,9 @@
       },
       "adminPolicy": {
           "users": ["admin"],
-          "actions": ["create", "update", "delete"]
+          "actions": ["read", "create", "update", "delete"]
         },
-      "defaultAdminPolicy": ["read"]
+      "defaultPolicy": ["read"]
     }
   },
   "log": {
