--- a/golangcilint.yaml
+++ b/golangcilint.yaml
@@ -5,7 +5,7 @@ run:
 
 linters:
   enable-all: true
-  disable: funlen,godox,gocognit
+  disable: funlen,godox,gocognit,exhaustivestruct,paralleltest,forbidigo,gomnd,ireturn,wrapcheck,gomoddirectives,exhaustive,revive
 
 output:
   format: colored-line-number
@@ -17,3 +17,8 @@ linters-settings:
   nestif:
     # their are various nested if else, therefore specifying complexity as 26
     min-complexity: 26
+  cyclop:
+    # the maximal code complexity to report
+    max-complexity: 40
+    # should ignore tests (default false)
+    skip-tests: true
